TestSuite/Syntax/Errors/Vacation2.tjp
project test "Test" "$Id" 2000-01-01 2000-01-31

resource team "Team" {
	vacation 2000-01-21 2000-01-25
}


